# shadow-ai-discovery

./: .gitignore  README.md  pyproject.toml
ai_discovery/: main.py  mock_data.py  models.py
ai_discovery/report/: json_export.py  terminal.py
ai_discovery/scanner/: apps.py  gpu.py  models_scan.py  packages.py  processes.py
tests/: conftest.py  test_apps.py  test_gpu.py  test_main.py  test_models_scan.py  test_packages.py  test_processes.py  test_report.py
tests/stubs/: winreg.py
