[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-discovery"
version = "0.1.0"
description = "Scan a Windows PC and identify all AI tools, models, and infrastructure"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.7",
    "psutil>=5.9",
    "requests>=2.31",
    "typer[all]>=0.12",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12", "pytest-cov>=5.0", "pyinstaller>=6.0"]

[project.scripts]
ai-discovery = "ai_discovery.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_discovery*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
